npm publishできるように

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "npm-example",
+  "name": "@lukesilvia/npm-example",
   "version": "1.0.0",
   "description": "",
   "bin": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/lukesilvia/npm-example.git"
+    "url": "https://github.com/lukesilvia/npm-example"
   },
   "keywords": [],
   "author": "",
